// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom primary key tests should generate correct model intropection file validated by JSON schema and not throw error when custom PK is enabled 1`] = `
"{
    \\"version\\": 1,
    \\"models\\": {
        \\"Project1\\": {
            \\"name\\": \\"Project1\\",
            \\"fields\\": {
                \\"projectId\\": {
                    \\"name\\": \\"projectId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"name\\": {
                    \\"name\\": \\"name\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"team\\": {
                    \\"name\\": \\"team\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"Team1\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"HAS_ONE\\",
                        \\"associatedWith\\": [
                            \\"teamId\\",
                            \\"name\\"
                        ],
                        \\"targetNames\\": [
                            \\"project1TeamTeamId\\",
                            \\"project1TeamName\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"project1TeamTeamId\\": {
                    \\"name\\": \\"project1TeamTeamId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"project1TeamName\\": {
                    \\"name\\": \\"project1TeamName\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Project1s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"projectId\\",
                            \\"name\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"projectId\\",
                \\"sortKeyFieldNames\\": [
                    \\"name\\"
                ]
            }
        },
        \\"Team1\\": {
            \\"name\\": \\"Team1\\",
            \\"fields\\": {
                \\"teamId\\": {
                    \\"name\\": \\"teamId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"name\\": {
                    \\"name\\": \\"name\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"project\\": {
                    \\"name\\": \\"project\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"Project1\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"BELONGS_TO\\",
                        \\"targetNames\\": [
                            \\"team1ProjectProjectId\\",
                            \\"team1ProjectName\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"team1ProjectProjectId\\": {
                    \\"name\\": \\"team1ProjectProjectId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"team1ProjectName\\": {
                    \\"name\\": \\"team1ProjectName\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Team1s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"teamId\\",
                            \\"name\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"teamId\\",
                \\"sortKeyFieldNames\\": [
                    \\"name\\"
                ]
            }
        },
        \\"Project2\\": {
            \\"name\\": \\"Project2\\",
            \\"fields\\": {
                \\"projectId\\": {
                    \\"name\\": \\"projectId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"name\\": {
                    \\"name\\": \\"name\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"team\\": {
                    \\"name\\": \\"team\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"Team2\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"HAS_ONE\\",
                        \\"associatedWith\\": [
                            \\"teamId\\",
                            \\"name\\"
                        ],
                        \\"targetNames\\": [
                            \\"project2TeamTeamId\\",
                            \\"project2TeamName\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"project2TeamTeamId\\": {
                    \\"name\\": \\"project2TeamTeamId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"project2TeamName\\": {
                    \\"name\\": \\"project2TeamName\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Project2s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"projectId\\",
                            \\"name\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"projectId\\",
                \\"sortKeyFieldNames\\": [
                    \\"name\\"
                ]
            }
        },
        \\"Team2\\": {
            \\"name\\": \\"Team2\\",
            \\"fields\\": {
                \\"teamId\\": {
                    \\"name\\": \\"teamId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"name\\": {
                    \\"name\\": \\"name\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Team2s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"teamId\\",
                            \\"name\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"teamId\\",
                \\"sortKeyFieldNames\\": [
                    \\"name\\"
                ]
            }
        },
        \\"Project3\\": {
            \\"name\\": \\"Project3\\",
            \\"fields\\": {
                \\"projectId\\": {
                    \\"name\\": \\"projectId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"name\\": {
                    \\"name\\": \\"name\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"team\\": {
                    \\"name\\": \\"team\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"Team3\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"HAS_ONE\\",
                        \\"associatedWith\\": [
                            \\"teamId\\",
                            \\"name\\"
                        ],
                        \\"targetNames\\": [
                            \\"teamId\\",
                            \\"teamName\\"
                        ]
                    }
                },
                \\"teamId\\": {
                    \\"name\\": \\"teamId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"teamName\\": {
                    \\"name\\": \\"teamName\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Project3s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"projectId\\",
                            \\"name\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"projectId\\",
                \\"sortKeyFieldNames\\": [
                    \\"name\\"
                ]
            }
        },
        \\"Team3\\": {
            \\"name\\": \\"Team3\\",
            \\"fields\\": {
                \\"teamId\\": {
                    \\"name\\": \\"teamId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"name\\": {
                    \\"name\\": \\"name\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"project\\": {
                    \\"name\\": \\"project\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"Project3\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"BELONGS_TO\\",
                        \\"targetNames\\": [
                            \\"projectId\\",
                            \\"projectName\\"
                        ]
                    }
                },
                \\"projectId\\": {
                    \\"name\\": \\"projectId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"projectName\\": {
                    \\"name\\": \\"projectName\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Team3s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"teamId\\",
                            \\"name\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"teamId\\",
                \\"sortKeyFieldNames\\": [
                    \\"name\\"
                ]
            }
        },
        \\"Project4\\": {
            \\"name\\": \\"Project4\\",
            \\"fields\\": {
                \\"projectId\\": {
                    \\"name\\": \\"projectId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"name\\": {
                    \\"name\\": \\"name\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"team\\": {
                    \\"name\\": \\"team\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"Team4\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"HAS_ONE\\",
                        \\"associatedWith\\": [
                            \\"teamId\\",
                            \\"name\\"
                        ],
                        \\"targetNames\\": [
                            \\"teamId\\",
                            \\"teamName\\"
                        ]
                    }
                },
                \\"teamId\\": {
                    \\"name\\": \\"teamId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"teamName\\": {
                    \\"name\\": \\"teamName\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Project4s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"projectId\\",
                            \\"name\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"projectId\\",
                \\"sortKeyFieldNames\\": [
                    \\"name\\"
                ]
            }
        },
        \\"Team4\\": {
            \\"name\\": \\"Team4\\",
            \\"fields\\": {
                \\"teamId\\": {
                    \\"name\\": \\"teamId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"name\\": {
                    \\"name\\": \\"name\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Team4s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"teamId\\",
                            \\"name\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"teamId\\",
                \\"sortKeyFieldNames\\": [
                    \\"name\\"
                ]
            }
        },
        \\"Post1\\": {
            \\"name\\": \\"Post1\\",
            \\"fields\\": {
                \\"postId\\": {
                    \\"name\\": \\"postId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"title\\": {
                    \\"name\\": \\"title\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"comments\\": {
                    \\"name\\": \\"comments\\",
                    \\"isArray\\": true,
                    \\"type\\": {
                        \\"model\\": \\"Comment1\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isArrayNullable\\": true,
                    \\"association\\": {
                        \\"connectionType\\": \\"HAS_MANY\\",
                        \\"associatedWith\\": [
                            \\"post1CommentsPostId\\",
                            \\"post1CommentsTitle\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Post1s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"postId\\",
                            \\"title\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"postId\\",
                \\"sortKeyFieldNames\\": [
                    \\"title\\"
                ]
            }
        },
        \\"Comment1\\": {
            \\"name\\": \\"Comment1\\",
            \\"fields\\": {
                \\"commentId\\": {
                    \\"name\\": \\"commentId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"content\\": {
                    \\"name\\": \\"content\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"post\\": {
                    \\"name\\": \\"post\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"Post1\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"BELONGS_TO\\",
                        \\"targetNames\\": [
                            \\"post1CommentsPostId\\",
                            \\"post1CommentsTitle\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"post1CommentsPostId\\": {
                    \\"name\\": \\"post1CommentsPostId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"post1CommentsTitle\\": {
                    \\"name\\": \\"post1CommentsTitle\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Comment1s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"commentId\\",
                            \\"content\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"commentId\\",
                \\"sortKeyFieldNames\\": [
                    \\"content\\"
                ]
            }
        },
        \\"Post2\\": {
            \\"name\\": \\"Post2\\",
            \\"fields\\": {
                \\"postId\\": {
                    \\"name\\": \\"postId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"title\\": {
                    \\"name\\": \\"title\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"comments\\": {
                    \\"name\\": \\"comments\\",
                    \\"isArray\\": true,
                    \\"type\\": {
                        \\"model\\": \\"Comment2\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isArrayNullable\\": true,
                    \\"association\\": {
                        \\"connectionType\\": \\"HAS_MANY\\",
                        \\"associatedWith\\": [
                            \\"post2CommentsPostId\\",
                            \\"post2CommentsTitle\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Post2s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"postId\\",
                            \\"title\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"postId\\",
                \\"sortKeyFieldNames\\": [
                    \\"title\\"
                ]
            }
        },
        \\"Comment2\\": {
            \\"name\\": \\"Comment2\\",
            \\"fields\\": {
                \\"commentId\\": {
                    \\"name\\": \\"commentId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"content\\": {
                    \\"name\\": \\"content\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"post2CommentsPostId\\": {
                    \\"name\\": \\"post2CommentsPostId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"post2CommentsTitle\\": {
                    \\"name\\": \\"post2CommentsTitle\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Comment2s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"commentId\\",
                            \\"content\\"
                        ]
                    }
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"name\\": \\"gsi-Post2.comments\\",
                        \\"fields\\": [
                            \\"post2CommentsPostId\\",
                            \\"post2CommentsTitle\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"commentId\\",
                \\"sortKeyFieldNames\\": [
                    \\"content\\"
                ]
            }
        },
        \\"Post3\\": {
            \\"name\\": \\"Post3\\",
            \\"fields\\": {
                \\"postId\\": {
                    \\"name\\": \\"postId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"title\\": {
                    \\"name\\": \\"title\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"comments\\": {
                    \\"name\\": \\"comments\\",
                    \\"isArray\\": true,
                    \\"type\\": {
                        \\"model\\": \\"Comment3\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isArrayNullable\\": true,
                    \\"association\\": {
                        \\"connectionType\\": \\"HAS_MANY\\",
                        \\"associatedWith\\": [
                            \\"post\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Post3s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"postId\\",
                            \\"title\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"postId\\",
                \\"sortKeyFieldNames\\": [
                    \\"title\\"
                ]
            }
        },
        \\"Comment3\\": {
            \\"name\\": \\"Comment3\\",
            \\"fields\\": {
                \\"commentId\\": {
                    \\"name\\": \\"commentId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"content\\": {
                    \\"name\\": \\"content\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"post\\": {
                    \\"name\\": \\"post\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"Post3\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"BELONGS_TO\\",
                        \\"targetNames\\": [
                            \\"postId\\",
                            \\"postTitle\\"
                        ]
                    }
                },
                \\"postId\\": {
                    \\"name\\": \\"postId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"postTitle\\": {
                    \\"name\\": \\"postTitle\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Comment3s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"commentId\\",
                            \\"content\\"
                        ]
                    }
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"name\\": \\"byPost\\",
                        \\"fields\\": [
                            \\"postId\\",
                            \\"postTitle\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"commentId\\",
                \\"sortKeyFieldNames\\": [
                    \\"content\\"
                ]
            }
        },
        \\"Post4\\": {
            \\"name\\": \\"Post4\\",
            \\"fields\\": {
                \\"postId\\": {
                    \\"name\\": \\"postId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"title\\": {
                    \\"name\\": \\"title\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"comments\\": {
                    \\"name\\": \\"comments\\",
                    \\"isArray\\": true,
                    \\"type\\": {
                        \\"model\\": \\"Comment4\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isArrayNullable\\": true,
                    \\"association\\": {
                        \\"connectionType\\": \\"HAS_MANY\\",
                        \\"associatedWith\\": [
                            \\"postId\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Post4s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"postId\\",
                            \\"title\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"postId\\",
                \\"sortKeyFieldNames\\": [
                    \\"title\\"
                ]
            }
        },
        \\"Comment4\\": {
            \\"name\\": \\"Comment4\\",
            \\"fields\\": {
                \\"commentId\\": {
                    \\"name\\": \\"commentId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"content\\": {
                    \\"name\\": \\"content\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"postId\\": {
                    \\"name\\": \\"postId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"postTitle\\": {
                    \\"name\\": \\"postTitle\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Comment4s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"commentId\\",
                            \\"content\\"
                        ]
                    }
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"name\\": \\"byPost\\",
                        \\"fields\\": [
                            \\"postId\\",
                            \\"postTitle\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"commentId\\",
                \\"sortKeyFieldNames\\": [
                    \\"content\\"
                ]
            }
        },
        \\"Post\\": {
            \\"name\\": \\"Post\\",
            \\"fields\\": {
                \\"customPostId\\": {
                    \\"name\\": \\"customPostId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"title\\": {
                    \\"name\\": \\"title\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"content\\": {
                    \\"name\\": \\"content\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"tags\\": {
                    \\"name\\": \\"tags\\",
                    \\"isArray\\": true,
                    \\"type\\": {
                        \\"model\\": \\"PostTags\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isArrayNullable\\": true,
                    \\"association\\": {
                        \\"connectionType\\": \\"HAS_MANY\\",
                        \\"associatedWith\\": [
                            \\"post\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Posts\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"customPostId\\",
                            \\"title\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"customPostId\\",
                \\"sortKeyFieldNames\\": [
                    \\"title\\"
                ]
            }
        },
        \\"Tag\\": {
            \\"name\\": \\"Tag\\",
            \\"fields\\": {
                \\"customTagId\\": {
                    \\"name\\": \\"customTagId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"label\\": {
                    \\"name\\": \\"label\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"posts\\": {
                    \\"name\\": \\"posts\\",
                    \\"isArray\\": true,
                    \\"type\\": {
                        \\"model\\": \\"PostTags\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isArrayNullable\\": true,
                    \\"association\\": {
                        \\"connectionType\\": \\"HAS_MANY\\",
                        \\"associatedWith\\": [
                            \\"tag\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Tags\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"customTagId\\",
                            \\"label\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"customTagId\\",
                \\"sortKeyFieldNames\\": [
                    \\"label\\"
                ]
            }
        },
        \\"PostTags\\": {
            \\"name\\": \\"PostTags\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"postCustomPostId\\": {
                    \\"name\\": \\"postCustomPostId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"posttitle\\": {
                    \\"name\\": \\"posttitle\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"tagCustomTagId\\": {
                    \\"name\\": \\"tagCustomTagId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"taglabel\\": {
                    \\"name\\": \\"taglabel\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"post\\": {
                    \\"name\\": \\"post\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"Post\\"
                    },
                    \\"isRequired\\": true,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"BELONGS_TO\\",
                        \\"targetNames\\": [
                            \\"postCustomPostId\\",
                            \\"posttitle\\"
                        ]
                    }
                },
                \\"tag\\": {
                    \\"name\\": \\"tag\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"Tag\\"
                    },
                    \\"isRequired\\": true,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"BELONGS_TO\\",
                        \\"targetNames\\": [
                            \\"tagCustomTagId\\",
                            \\"taglabel\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"PostTags\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"name\\": \\"byPost\\",
                        \\"fields\\": [
                            \\"postCustomPostId\\",
                            \\"posttitle\\"
                        ]
                    }
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"name\\": \\"byTag\\",
                        \\"fields\\": [
                            \\"tagCustomTagId\\",
                            \\"taglabel\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": false,
                \\"primaryKeyFieldName\\": \\"id\\",
                \\"sortKeyFieldNames\\": []
            }
        }
    },
    \\"enums\\": {},
    \\"nonModels\\": {}
}"
`;

exports[`Model Introspection Visitor Metadata snapshot should generate correct model intropection file validated by JSON schema 1`] = `
"{
    \\"version\\": 1,
    \\"models\\": {
        \\"SimpleModel\\": {
            \\"name\\": \\"SimpleModel\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"name\\": {
                    \\"name\\": \\"name\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"bar\\": {
                    \\"name\\": \\"bar\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"children\\": {
                    \\"name\\": \\"children\\",
                    \\"isArray\\": true,
                    \\"type\\": {
                        \\"model\\": \\"Child\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isArrayNullable\\": true,
                    \\"association\\": {
                        \\"connectionType\\": \\"HAS_MANY\\",
                        \\"associatedWith\\": [
                            \\"simpleModelChildrenId\\"
                        ]
                    }
                },
                \\"ssn\\": {
                    \\"name\\": \\"ssn\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"SSN\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"HAS_ONE\\",
                        \\"associatedWith\\": [
                            \\"user\\"
                        ],
                        \\"targetNames\\": [
                            \\"simpleModelSsnId\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"simpleModelSsnId\\": {
                    \\"name\\": \\"simpleModelSsnId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"SimpleModels\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": false,
                \\"primaryKeyFieldName\\": \\"id\\",
                \\"sortKeyFieldNames\\": []
            }
        },
        \\"Child\\": {
            \\"name\\": \\"Child\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"parent\\": {
                    \\"name\\": \\"parent\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"SimpleModel\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"BELONGS_TO\\",
                        \\"targetNames\\": [
                            \\"simpleModelChildrenId\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Children\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": false,
                \\"primaryKeyFieldName\\": \\"id\\",
                \\"sortKeyFieldNames\\": []
            }
        },
        \\"SSN\\": {
            \\"name\\": \\"SSN\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"user\\": {
                    \\"name\\": \\"user\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"SimpleModel\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"BELONGS_TO\\",
                        \\"targetNames\\": [
                            \\"sSNUserId\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"SSNS\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": false,
                \\"primaryKeyFieldName\\": \\"id\\",
                \\"sortKeyFieldNames\\": []
            }
        }
    },
    \\"enums\\": {
        \\"SimpleEnum\\": {
            \\"name\\": \\"SimpleEnum\\",
            \\"values\\": [
                \\"enumVal1\\",
                \\"enumVal2\\"
            ]
        }
    },
    \\"nonModels\\": {
        \\"SimpleNonModelType\\": {
            \\"name\\": \\"SimpleNonModelType\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"names\\": {
                    \\"name\\": \\"names\\",
                    \\"isArray\\": true,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isArrayNullable\\": true
                }
            }
        }
    }
}"
`;

exports[`Primary Key Info tests should generate correct primary key info for model with/without custom primary key 1`] = `
"{
    \\"version\\": 1,
    \\"models\\": {
        \\"Todo1\\": {
            \\"name\\": \\"Todo1\\",
            \\"fields\\": {
                \\"todoId\\": {
                    \\"name\\": \\"todoId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Todo1s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"todoId\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"todoId\\",
                \\"sortKeyFieldNames\\": []
            }
        },
        \\"Todo2\\": {
            \\"name\\": \\"Todo2\\",
            \\"fields\\": {
                \\"todoId\\": {
                    \\"name\\": \\"todoId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"title\\": {
                    \\"name\\": \\"title\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Todo2s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"todoId\\",
                            \\"title\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"todoId\\",
                \\"sortKeyFieldNames\\": [
                    \\"title\\"
                ]
            }
        },
        \\"Todo3\\": {
            \\"name\\": \\"Todo3\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"title\\": {
                    \\"name\\": \\"title\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Todo3s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"id\\",
                            \\"title\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"id\\",
                \\"sortKeyFieldNames\\": [
                    \\"title\\"
                ]
            }
        },
        \\"Todo4\\": {
            \\"name\\": \\"Todo4\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"title\\": {
                    \\"name\\": \\"title\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Todo4s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": false,
                \\"primaryKeyFieldName\\": \\"id\\",
                \\"sortKeyFieldNames\\": []
            }
        },
        \\"Todo5\\": {
            \\"name\\": \\"Todo5\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Todo5s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"id\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": false,
                \\"primaryKeyFieldName\\": \\"id\\",
                \\"sortKeyFieldNames\\": []
            }
        },
        \\"Todo6\\": {
            \\"name\\": \\"Todo6\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Todo6s\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": false,
                \\"primaryKeyFieldName\\": \\"id\\",
                \\"sortKeyFieldNames\\": []
            }
        }
    },
    \\"enums\\": {},
    \\"nonModels\\": {}
}"
`;

exports[`Primary key info within a belongsTo model tests should generate correct primary key info for model when the primary key field is part of belongsTo connection field and custom PK is disabled 1`] = `
"{
    \\"version\\": 1,
    \\"models\\": {
        \\"Post\\": {
            \\"name\\": \\"Post\\",
            \\"fields\\": {
                \\"postId\\": {
                    \\"name\\": \\"postId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"node\\": {
                    \\"name\\": \\"node\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"PostNode\\"
                    },
                    \\"isRequired\\": true,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"BELONGS_TO\\",
                        \\"targetNames\\": [
                            \\"postId\\"
                        ]
                    }
                },
                \\"title\\": {
                    \\"name\\": \\"title\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Posts\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"postId\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"postId\\",
                \\"sortKeyFieldNames\\": []
            }
        },
        \\"PostNode\\": {
            \\"name\\": \\"PostNode\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"post\\": {
                    \\"name\\": \\"post\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"Post\\"
                    },
                    \\"isRequired\\": true,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"HAS_ONE\\",
                        \\"associatedWith\\": [
                            \\"node\\"
                        ],
                        \\"targetNames\\": [
                            \\"postNodePostId\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"postNodePostId\\": {
                    \\"name\\": \\"postNodePostId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"PostNodes\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": false,
                \\"primaryKeyFieldName\\": \\"id\\",
                \\"sortKeyFieldNames\\": []
            }
        }
    },
    \\"enums\\": {},
    \\"nonModels\\": {}
}"
`;

exports[`schemas with pk on a belongsTo fk works for v1 1`] = `
"{
    \\"version\\": 1,
    \\"models\\": {
        \\"Blog\\": {
            \\"name\\": \\"Blog\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"title\\": {
                    \\"name\\": \\"title\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"posts\\": {
                    \\"name\\": \\"posts\\",
                    \\"isArray\\": true,
                    \\"type\\": {
                        \\"model\\": \\"Post\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isArrayNullable\\": true,
                    \\"association\\": {
                        \\"connectionType\\": \\"HAS_MANY\\",
                        \\"associatedWith\\": []
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Blogs\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": false,
                \\"primaryKeyFieldName\\": \\"id\\",
                \\"sortKeyFieldNames\\": []
            }
        },
        \\"Post\\": {
            \\"name\\": \\"Post\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"blogId\\": {
                    \\"name\\": \\"blogId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"title\\": {
                    \\"name\\": \\"title\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"description\\": {
                    \\"name\\": \\"description\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"blog\\": {
                    \\"name\\": \\"blog\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"Blog\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"BELONGS_TO\\",
                        \\"targetNames\\": []
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Posts\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"blogId\\",
                            \\"title\\",
                            \\"description\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"blogId\\",
                \\"sortKeyFieldNames\\": [
                    \\"title\\",
                    \\"description\\"
                ]
            }
        }
    },
    \\"enums\\": {},
    \\"nonModels\\": {}
}"
`;

exports[`schemas with pk on a belongsTo fk works for v2 1`] = `
"{
    \\"version\\": 1,
    \\"models\\": {
        \\"Blog\\": {
            \\"name\\": \\"Blog\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"title\\": {
                    \\"name\\": \\"title\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"posts\\": {
                    \\"name\\": \\"posts\\",
                    \\"isArray\\": true,
                    \\"type\\": {
                        \\"model\\": \\"Post\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isArrayNullable\\": true,
                    \\"association\\": {
                        \\"connectionType\\": \\"HAS_MANY\\",
                        \\"associatedWith\\": [
                            \\"blog\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Blogs\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": false,
                \\"primaryKeyFieldName\\": \\"id\\",
                \\"sortKeyFieldNames\\": []
            }
        },
        \\"Post\\": {
            \\"name\\": \\"Post\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"blogId\\": {
                    \\"name\\": \\"blogId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"title\\": {
                    \\"name\\": \\"title\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"description\\": {
                    \\"name\\": \\"description\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"blog\\": {
                    \\"name\\": \\"blog\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"Blog\\"
                    },
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"BELONGS_TO\\",
                        \\"targetNames\\": [
                            \\"blogId\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Posts\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"blogId\\",
                            \\"title\\",
                            \\"description\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"blogId\\",
                \\"sortKeyFieldNames\\": [
                    \\"title\\",
                    \\"description\\"
                ]
            }
        }
    },
    \\"enums\\": {},
    \\"nonModels\\": {}
}"
`;
